--- a/watchlist/static/style.css
+++ b/watchlist/static/style.css
@@ -35,12 +35,13 @@ body {
 
 #userimg img {
 	margin: 5px auto;
+	border: 1px solid white;
 }
 
 #user {
 	float: right;
 	font-size: 15px;
-	margin-top: 6px;
+	margin-top: 7px;
 	margin-left: 5px;
 	margin-right: 15px;
 	padding: 2px;
@@ -121,9 +122,12 @@ body {
 	text-decoration: none;
 	text-align: center;
 	font-size: 20px;
-	line-height: 60px;
+	line-height: 50px;
 	height: 60px;
 	color: black;
+	margin: 5px;
+	padding: 2px;
+	font-weight: bold;
 }
 
 .asidepic {
@@ -141,7 +145,9 @@ body {
 .asidechoices {
 	height: 80%;
 	float: left;
-	line-height: 100%;
+	margin:2px;
+	padding: 2px;
+	/*border: 1px solid;*/
 }
 
 #content {
@@ -197,21 +203,21 @@ body {
 }
 #visitor_login{
 	padding:0 8px;
-	 margin:2px 5px;
-	 font-size:13px;
-	 float:right;
-	 background: rgba(255, 255, 255, 0.2);
-	 color:black;
-	 border:1px solid white;
+	margin:2px 5px;
+	font-size:13px;
+	float:right;
+	background: rgba(255, 255, 255, 0.2);
+	color:black;
+	border:1px solid white;
 }
 #login_login{
-	 padding:0 8px;
-	 margin:2px -1px 2px 5px;
-	 font-size:13px;
-	 float:right;
-	 background: rgba(255, 255, 255, 0.2);
-	 color:black;
-	 border:1px solid white;
+	padding:0 8px;
+	margin:2px -1px 2px 5px;
+	font-size:13px;
+	float:right;
+	background: rgba(255, 255, 255, 0.2);
+	color:black;
+	border:1px solid white;
 }
 #login_regit{
 	padding:0 8px;
@@ -249,22 +255,39 @@ body {
 	float: left;
 	margin: 25px;
 	border: 1px solid white;
-	background: rgba(255, 255, 255, 0.2);
+	background: rgba(255, 255, 255, 0.3);
 	padding: 20px;
 	font-size: 20px;
-	border-radius: 30px;
+	border-radius: 8px;
+	overflow: auto;
 }
 
 .index_box a {
 	font-size: 25px;
 	text-decoration: none;
+	color: black;
+	font-weight: bold;
+}
+.index_box_no{
+	font-size: 18px;
+	margin: 10px;
+	text-align: center
+}
+.index_coursebox{
+	font-size: 22px;
+	border: 1px solid white;
+	height: 50px;
+	width: 100%;
+	border-radius: 5px;
+	margin-top: 8px;
+	padding: 5px;
 }
 
 .teacherpic {
 	height: 10%;
 	float: left;
 	line-height: 100%;
-	margin-right: 2px;
+	margin-right: 5px;
 }
 
 .teacherpic img {
@@ -287,42 +310,66 @@ body {
 	margin: 10px;
 	font-size: 20px;
 	border-radius: 30px;
+	color: black;
 }
-
 .program a {
 	text-decoration: none;
 	font-size: 20px;
 	height: 60px;
+	color: black;
+	font-weight: bold;
+}
+.programsum{
+	height: 90%;
+	width: 100%;
+	overflow: auto;
+	/*border: 1px solid;*/
+	margin: 3px;
 }
 
 #ssh {
 	float: left;
 	height: 60px;
 	width: 50%;
-	border: 1px solid #cff;
+	border: 1px solid white;
+	background: rgba(255, 255, 255, 0.3);
 	padding: 10px;
 	margin: 10px;
 	font-size: 20px;
+	border-radius: 10px;
 }
 
 #submit {
 	float: right;
 	height: 60px;
 	width: 40%;
-	border: 1px solid #cff;
 	padding: 10px;
 	margin: 10px;
 	font-size: 20px;
+	border: 1px solid white;
+	background: rgba(255, 255, 255, 0.3);
+	border-radius: 10px;
 }
 
 #edit {
 	height: 380px;
-	border: 1px solid #cff;
 	padding: 10px;
 	margin: 10px;
 	font-size: 20px;
 	float: auto;
 	clear: both;
+	border: 1px solid white;
+	background: rgba(255, 255, 255, 0.3);
+	border-radius: 10px;
+}
+#edit_text{
+	height:82%;
+	width:99%;
+	margin:3px;
+	overflow: auto;
+	background: rgba(255, 255, 255, 0.65);
+	padding: 3px;
+	border: 1px solid rgba(255, 255, 255, 0.6);
 }
 
 .result {
@@ -400,4 +447,35 @@ body {
 	padding: 3px;
 	line-height: 24px;
 	overflow: auto;
+}
+.courseintro{
+	height: 80%;
+	width: 92.5%;
+	float: right;
+	overflow: auto;
+}
+#ssh_button{
+	padding:2px 5px;
+	margin:1px;
+	font-size:15px;
+	background: rgba(255, 255, 255,0.9);
+	color:black;
+	border-radius: 3px;
+}
+#submit_button{
+	padding:2px 5px;
+	margin-top:8px;
+	font-size:15px;
+	background: rgba(255, 255, 255,0.9);
+	color:black;
+	border-radius: 3px;
+}
+#edit_button{
+	float: right;
+	padding:2px 5px;
+	margin:1px;
+	font-size:15px;
+	background: rgba(255, 255, 255,0.9);
+	color:black;
+	border-radius: 3px;
 }
