--- a/watchlist/templates/login.html
+++ b/watchlist/templates/login.html
@@ -1,5 +1,10 @@
 {% extends "layout.html" %}
 {% block body %}
+{% for message in get_flashed_messages() %}
+
+    <div class="alert">{{ message }}</div>
+
+{% endfor %}
 <div id="container">
     <div id="header" >
 		<div id="logo">
@@ -49,5 +54,6 @@
             </div>
         </div>
     </div>
+<div>
 
 {% endblock %}
