--- a/watchlist/templates/my_courses.html
+++ b/watchlist/templates/my_courses.html
@@ -76,7 +76,7 @@
 
 			<div id="content">
 				<div id="程序设计" class="index_box">
-					<a href="course/xxx/">程序设计基础</a>
+					<a href="/my_courses/xxx/">程序设计基础</a>
 					<div id="程序设计info" class="information">
 						<div id="teacherpic" class="teacherpic">
 							<img src="/static/pic/teacher.png" alt="">
@@ -91,7 +91,7 @@
 				</div>
 
 				<div id="人工智能原理" class="index_box">
-					<a href="course/xxx/">人工智能原理</a>
+					<a href="/my_courses/xxx/">人工智能原理</a>
 					<div id="人工智能原理info" class="information">
 						<div id="teacherpic" class="teacherpic">
 							<img src="/static/pic/teacher.png" alt="">
@@ -105,7 +105,7 @@
 				</div>
 
 				<div id="xxx" class="index_box">
-					<a href="course/xxx/">xxx实验室</a>
+					<a href="/my_courses/xxx/">xxx实验室</a>
 					<div id="xxxinfo" class="information">
 						<div id="teacherpic" class="teacherpic">
 							<img src="/static/pic/teacher.png" alt="">
@@ -119,7 +119,7 @@
 				</div>
 				
 				<div id="add" class="index_box">
-					<a href="course/all_courses/">
+					<a href="/my_courses/all_courses/">
 						<p>添加课程</p>
 					</a>
 					<div id="xxxinfo" class="information">
