边栏背景色、进程页面有问题待解决

--- a/watchlist/templates/index.html
+++ b/watchlist/templates/index.html
@@ -71,40 +71,95 @@
 
 			<div id="content">
 				<div id="my_courses" class="index_box">
-					<a href="/my_courses/">我的课程</a>
+					<a href="/my_courses/">
+						<div class="index_img">
+							<img src="/static/pic/courses.png" alt="">
+						</div>
+						我的课程
+					</a>
 					<div class="index_coursebox">
-						课程1
+						<a href="">
+							<div class="index_img">
+								<img src="/static/pic/course_.png" alt="">
+							</div>
+							课程1
+						</a>
 					</div>
 					<div class="index_coursebox">
-						课程2
+						<a href="">
+							<div class="index_img">
+								<img src="/static/pic/course_.png" alt="">
+							</div>
+							课程2
+						</a>
 					</div>
 					<div class="index_coursebox">
-						课程3
+						<a href="">
+							<div class="index_img">
+								<img src="/static/pic/course_.png" alt="">
+							</div>
+							课程3
+						</a>
 					</div>
 					<p class="index_box_no">--没有更多课程--</p>
 				</div>
 
 				<div id="my_process" class="index_box">
-					<a href="/process/">我的进程</a>
+					<a href="/process/">
+						<div class="index_img">
+							<img src="/static/pic/process.png" alt="">
+						</div>
+						&nbsp我的进程
+					</a>
 					<div class="index_coursebox">
-						process1
+						<a href="">
+							<div class="index_img">
+								<img src="/static/pic/process_.png" alt="">
+							</div>
+							process1
+						</a>
 					</div>
 					<div class="index_coursebox">
-						process2
+						<a href="">
+							<div class="index_img">
+								<img src="/static/pic/process_.png" alt="">
+							</div>
+							process2
+						</a>
 					</div>
 					<div class="index_coursebox">
-						process3
+						<a href="">
+							<div class="index_img">
+								<img src="/static/pic/process_.png" alt="">
+							</div>
+							process3
+						</a>
 					</div>
 					<p class="index_box_no">--没有更多进程--</p>
 				</div>
 
 				<div id="my_message" class="index_box">
-					<a href="/message/">通知</a>
+					<a href="/message/">
+						<div class="index_img">
+							<img src="/static/pic/message.png" alt="">
+						</div>
+						&nbsp通知
+					</a>
 					<div class="index_coursebox">
-						message1
+						<a href="">
+							<div class="index_img">
+								<img src="/static/pic/process_.png" alt="">
+							</div>
+							message1
+						</a>
 					</div>
 					<div class="index_coursebox">
-						message2
+						<a href="">
+							<div class="index_img">
+								<img src="/static/pic/process_.png" alt="">
+							</div>
+							message2
+						</a>
 					</div>
 					<p class="index_box_no">--没有更多通知--</p>
 				</div>
