--- a/watchlist/templates/my_courses.html
+++ b/watchlist/templates/my_courses.html
@@ -76,7 +76,12 @@
 
 			<div id="content">
 				<div id="程序设计" class="index_box">
-					<a href="/my_courses/xxx/">程序设计基础</a>
+					<a href="/my_courses/xxx/">
+						<div class="index_img">
+							<img src="/static/pic/courses.png" alt="">
+						</div>
+						程序设计基础
+					</a>
 					<div id="程序设计info" class="information">
 						<div id="teacherpic" class="teacherpic">
 							<img src="/static/pic/teacher.png" alt="">
@@ -91,7 +96,12 @@
 				</div>
 
 				<div id="人工智能原理" class="index_box">
-					<a href="/my_courses/xxx/">人工智能原理</a>
+					<a href="/my_courses/xxx/">
+						<div class="index_img">
+							<img src="/static/pic/courses.png" alt="">
+						</div>
+						人工智能原理
+					</a>
 					<div id="人工智能原理info" class="information">
 						<div id="teacherpic" class="teacherpic">
 							<img src="/static/pic/teacher.png" alt="">
@@ -105,7 +115,12 @@
 				</div>
 
 				<div id="xxx" class="index_box">
-					<a href="/my_courses/xxx/">xxx实验室</a>
+					<a href="/my_courses/xxx/">
+						<div class="index_img">
+							<img src="/static/pic/courses.png" alt="">
+						</div>
+						xxx实验室
+					</a>
 					<div id="xxxinfo" class="information">
 						<div id="teacherpic" class="teacherpic">
 							<img src="/static/pic/teacher.png" alt="">
@@ -120,9 +135,15 @@
 				
 				<div id="add" class="index_box">
 					<a href="/my_courses/all_courses/">
+						<div class="index_img">
+							<img src="/static/pic/add.png" alt="">
+						</div>
 						<p>添加课程</p>
 					</a>
 					<div id="xxxinfo" class="information">
+						<!-- <div class="index_img">
+							<img src="/static/pic/add_.png" alt="">
+						</div> -->
 						<p>课程不在列表里？加入新的课程</p>
 					</div>
 				</div>
