--- a/watchlist/templates/process.html
+++ b/watchlist/templates/process.html
@@ -71,21 +71,36 @@
 
 			<div id="content">
 				<div id="program1" class="program">
-					<a href="/static/program/1/">Program 1</a>
+					<a href="/static/program/1/">
+						<div class="index_img">
+							<img src="/static/pic/process_.png" alt="">
+						</div>
+						Program 1
+					</a>
 					<div class="programsum">
 						<p>xxx</p>
 					</div>
 				</div>
 
 				<div id="program2" class="program">
-					<a href="program/2/">Program 2</a>
+					<a href="/static/program/1/">
+						<div class="index_img">
+							<img src="/static/pic/process_.png" alt="">
+						</div>
+						Program 2
+					</a>
 					<div class="programsum">
 						<p>xxx</p>
 					</div>
 				</div>
 
 				<div id="program3" class="program">
-					<a href="program/3/">Program 3</a>
+					<a href="/static/program/1/">
+						<div class="index_img">
+							<img src="/static/pic/process_.png" alt="">
+						</div>
+						Program 3
+					</a>
 					<div class="programsum">
 						<p>xxx</p>
 					</div>
