--- a/watchlist/templates/all_courses.html
+++ b/watchlist/templates/all_courses.html
@@ -2,22 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ALL courses</title>
+	<title>Progress</title>
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
-				<img src="/static/pic/logo.png" alt="">
-				<span>GPU管理系统</span>
-			</div>
+	            <img src="../static/pic/logo.png" alt="">
+	            <span>GPU管理系统</span>
+	        </div>
 
 			<div id="other">
-				<div id="userimg">
-					<img src="/static/pic/1.jpg" alt="image">
-					<span>&nbsp&nbsp&nbsp</span>
-				</div>
 				<div id="userinfo">
 					<select name="user" id="user">
 						<option selected="selected" value="0" class="userselect">
@@ -27,17 +23,21 @@
 						<option value="2" class="userselect">退出登录</option>
 					</select>
 				</div>
+				<div id="userimg">
+					<img src="/static/pic/1.jpg" alt="image">
+				</div>				
 			</div>
 		</div>
 
 		<div id="main">
-			<div id="aside"><br>
+			<div id="aside">
+				<br>
 				<div id="Home Page">
 					<div class="asidepic">
 						<img src="/static/pic/home.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/index/">Home Page</a>
+						<a href="/index/">主页</a>
 					</div>
 				</div>
 
@@ -46,7 +46,7 @@
 						<img src="/static/pic/courses.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/my_courses/">My courses</a>
+						<a href="/my_courses/">我的课程</a>
 					</div>
 				</div>
 
@@ -55,7 +55,7 @@
 						<img src="/static/pic/process.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/process/">Process</a>
+						<a href="/process/">进程</a>
 					</div>
 				</div>
 
@@ -64,29 +64,113 @@
 						<img src="/static/pic/settings.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/settings/">Settings</a>
+						<a href="/settings/">设置</a>
 					</div>
 				</div>
 			</div>
 
 			<div id="content">
-				{% for course in courses %}
-					<div id="程序设计" class="index_box">
-						<a href="xxx.html">{{ course.name }}</a>
-						<div id="程序设计info" class="information">
-							<div id="teacherpic" class="teacherpic">
-								<img src="/static/pic/teacher.png" alt="">
-							</div>
-							<strong id="程序设计teacher">{{ course['teacher'] }}&nbsp</strong>
-							<span id="程序设计term">{{ course['time'] }}</span>
-							<p>课程简介：{{ course['info'] }}</p>
+				<div id="人工智能原理" class="index_box">
+					<a href="/my_courses/xxx/">
+						<div class="index_img">
+							<img src="/static/pic/courses.png" alt="">
+						</div>
+						人工智能原理
+					</a>
+					<div id="人工智能原理info" class="information">
+						<div id="teacherpic" class="teacherpic">
+							<img src="/static/pic/teacher.png" alt="">
+						</div>
+						<strong id="人工智能原理teacher">梁小丹&nbsp</strong> 
+						<span id="人工智能原理term">2017-2018学年&nbsp第1学期</span>
+						<div class="courseintro">
+							<p>课程简介：xxx</p>
 						</div>
 					</div>
-				{% endfor %}
+				</div>
 
+				<div id="人工智能原理" class="index_box">
+					<a href="/my_courses/xxx/">
+						<div class="index_img">
+							<img src="/static/pic/courses.png" alt="">
+						</div>
+						人工智能原理
+					</a>
+					<div id="人工智能原理info" class="information">
+						<div id="teacherpic" class="teacherpic">
+							<img src="/static/pic/teacher.png" alt="">
+						</div>
+						<strong id="人工智能原理teacher">梁小丹&nbsp</strong> 
+						<span id="人工智能原理term">2017-2018学年&nbsp第1学期</span>
+						<div class="courseintro">
+							<p>课程简介：xxx</p>
+						</div>
+					</div>
+				</div>
+
+				<div id="人工智能原理" class="index_box">
+					<a href="/my_courses/xxx/">
+						<div class="index_img">
+							<img src="/static/pic/courses.png" alt="">
+						</div>
+						人工智能原理
+					</a>
+					<div id="人工智能原理info" class="information">
+						<div id="teacherpic" class="teacherpic">
+							<img src="/static/pic/teacher.png" alt="">
+						</div>
+						<strong id="人工智能原理teacher">梁小丹&nbsp</strong> 
+						<span id="人工智能原理term">2017-2018学年&nbsp第1学期</span>
+						<div class="courseintro">
+							<p>课程简介：xxx</p>
+						</div>
+					</div>
+				</div>
+
+				<div id="人工智能原理" class="index_box">
+					<a href="/my_courses/xxx/">
+						<div class="index_img">
+							<img src="/static/pic/courses.png" alt="">
+						</div>
+						人工智能原理
+					</a>
+					<div id="人工智能原理info" class="information">
+						<div id="teacherpic" class="teacherpic">
+							<img src="/static/pic/teacher.png" alt="">
+						</div>
+						<strong id="人工智能原理teacher">梁小丹&nbsp</strong> 
+						<span id="人工智能原理term">2017-2018学年&nbsp第1学期</span>
+						<div class="courseintro">
+							<p>课程简介：xxx</p>
+						</div>
+					</div>
+				</div>
+
+				<div id="人工智能原理" class="index_box">
+					<a href="/my_courses/xxx/">
+						<div class="index_img">
+							<img src="/static/pic/courses.png" alt="">
+						</div>
+						人工智能原理
+					</a>
+					<div id="人工智能原理info" class="information">
+						<div id="teacherpic" class="teacherpic">
+							<img src="/static/pic/teacher.png" alt="">
+						</div>
+						<strong id="人工智能原理teacher">梁小丹&nbsp</strong> 
+						<span id="人工智能原理term">2017-2018学年&nbsp第1学期</span>
+						<div class="courseintro">
+							<p>课程简介：xxx</p>
+						</div>
+					</div>
+				</div>
+
+				
+
+				<p style="clear:both;" class="index_box_no">--没有更多课程--</p>
 			</div>
-
 		</div>
 
+	</div>
 </body>
 </html>
