--- a/watchlist/templates/process_xxx.html
+++ b/watchlist/templates/process_xxx.html
@@ -3,21 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Programm1-Result</title>
-	<link rel="stylesheet" href="../style/style.css" />
+	<link rel="stylesheet" href="../static/style.css" />
 </head>
 <body>
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
-				<img src="../pic/logo.png" alt="">
-				<span>GPU管理系统</span>
-			</div>
+	            <img src="../static/pic/logo.png" alt="">
+	            <span>GPU管理系统</span>
+	        </div>
 
 			<div id="other">
-				<div id="userimg">
-					<img src="../pic/1.jpg" alt="image">
-					<span>&nbsp&nbsp&nbsp</span>
-				</div>
 				<div id="userinfo">
 					<select name="user" id="user">
 						<option selected="selected" value="0" class="userselect">
@@ -26,67 +22,109 @@
 						<option value="1" class="userselect">通知</option>
 						<option value="2" class="userselect">退出登录</option>
 					</select>
+				</div>
+				<div id="userimg">
+					<img src="../static/pic/1.jpg" alt="image">
 				</div>				
 			</div>
 		</div>
 
 		<div id="main">
-			<div id="aside"><br>
+			<div id="aside">
+				<br>
 				<div id="Home Page">
 					<div class="asidepic">
-						<img src="../pic/home.png" alt="">
+						<img src="../static/pic/home.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="index.html">Home Page</a>
+						<a href="/index/">主页</a>
 					</div>
 				</div>
 
 				<div id="My courses">
 					<div class="asidepic">
-						<img src="../pic/courses.png" alt="">
+						<img src="../static/pic/courses.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="my_courses.html">My courses</a>
+						<a href="../my_courses/">我的课程</a>
 					</div>
 				</div>
 
 				<div id="Process">
 					<div class="asidepic">
-						<img src="../pic/process.png" alt="">
+						<img src="../static/pic/process.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="process.html">Process</a>
+						<a href="../process/">进程</a>
 					</div>
 				</div>
 
 				<div id="Settings">
 					<div class="asidepic">
-						<img src="../pic/settings.png" alt="">
+						<img src="../static/pic/settings.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="settings.html">Settings</a>
+						<a href="/settings/">设置</a>
 					</div>
 				</div>
 			</div>
 
 			<div id="content">
-				<div id="result-sum" class="result">
+				<div id="result1">
 					<p>Programm1-xxx</p>
-					<div class="box" >
-						<p style="height:50px;">
-							这个地方要显示的东西我还没有想通怎么链接过来
+					<div id="box1" >
+						<p>
+							finished
 						</p>
 					</div>
 				</div>
 
-				<div id="result-all" class="result">
+				<div id="result2">
 					<p>
 						运行结果
 					</p>
-					<p class="box" style="height:300px;">
+					<p id="box2" >
 						xxxxxxxxxxxxxxxx
 						<br>
 						xxxxxxxxxxx
+						<br>
+						xxxxxxxxxxxxxxxx
+						<br>
+						xxxxxxxxxxx
+						<br>
+						xxxxxxxxxxxxxxxx
+						<br>
+						xxxxxxxxxxx
+						<br>
+						xxxxxxxxxxxxxxxx
+						<br>
+						xxxxxxxxxxx
+						<br>
+						xxxxxxxxxxxxxxxx
+						<br>
+						xxxxxxxxxxx
+						<br>
+						xxxxxxxxxxxxxxxx
+						<br>
+						xxxxxxxxxxx
+						<br>
+						xxxxxxxxxxxxxxxx
+						<br>
+						xxxxxxxxxxx
+						<br>
+						xxxxxxxxxxxxxxxx
+						<br>
+						xxxxxxxxxxx
+						<br>
+						xxxxxxxxxxxxxxxx
+						<br>
+						xxxxxxxxxxx
+						<br>
+						xxxxxxxxxxxxxxxx
+						<br>
+						xxxxxxxxxxx
+						<br>
+
 					</p>
 				</div>
 
