--- a/watchlist/static/style.css
+++ b/watchlist/static/style.css
@@ -7,12 +7,10 @@
 
 html {
 	height: 100%;
+	background:url("pic/bg.gif") no-repeat;
+	background-size: cover;
 }
 
-body {
-	/*background: linear-gradient(to top right,#7A88FF,#7AFFAF);*/
-	background:url("/static/pic/bg.gif") no-repeat;
-}
 
 #container {
 	margin: 0;
@@ -174,7 +172,7 @@ body {
 	height: 33%;
 	width: 27%;
 	padding: 5px 5px 5px 5px;
-	margin-top: 10%;
+	margin-top: 15%;
 	margin-left: 35%;
 	background: rgba(255, 255, 255, 0.2);
 	border: 1px solid white;
@@ -322,7 +320,12 @@ body {
 	margin-top: 8px;
 	padding: 1px;
 }
-
+#programs{
+	height: 80%;
+	overflow: auto;
+	float: right;
+	width: 80%;
+}
 .program {
 	height: 100px;
 	border: 1px solid white;
@@ -393,14 +396,47 @@ body {
 	border: 1px solid rgba(255, 255, 255, 0.6);
 }
 
-.result {
+#result1 {
 	width: 90%;
-	border: 1px solid #cff;
+	height: 30%;
+	border: 1px solid white;
 	padding: 10px;
 	margin: 10px;
 	font-size: 20px;
 	text-align: left;
+	border-radius: 8px;
+	background: rgba(255, 255, 255, 0.2);
 }
+#result2 {
+	width: 90%;
+	height: 70%;
+	border: 1px solid white;
+	padding: 10px;
+	margin: 10px;
+	font-size: 20px;
+	text-align: left;
+	border-radius: 8px;
+	background: rgba(255, 255, 255, 0.2);
+}
+#box1 {
+	width: 99%;
+	height: 100%;
+	font-size: 20px;
+	padding: 5px;
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 5px;
+	font-size: 15px;
+}
+#box2 {
+	width: 99%;
+	height: 68%;
+	font-size: 20px;
+	padding: 5px;
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 5px;
+	font-size: 15px;
+}
+
 
 #result-xxx {
 	height: 300px;
@@ -408,16 +444,9 @@ body {
 	border: 1px solid white;
 	font-size: 20px;
 	text-indent: 40em;
-	background-color: #cfe;
+	background: rgba(255, 255, 255, 0.2);
 }
 
-.box {
-	width: 100%;
-
-	font-size: 20px;
-	text-indent: 40em;
-	background-color: #cfe;
-}
 
 .title {
 	width: 90%;
@@ -500,4 +529,94 @@ body {
 	background: rgba(255, 255, 255,0.9);
 	color:black;
 	border-radius: 3px;
+}
+
+#course_photo {
+	height: 20%;
+	width: 25%;
+	float: left;
+	margin: 10px;
+	padding: 10px;
+	border: 1px solid white;
+	background: rgba(255, 255, 255, 0.3);
+	border-radius: 5px;
+	text-align: center;
+}
+#course_photo img{
+	height: 70%;
+	width: 70%;
+}
+#course_notice {
+	height: 165px;
+	width: 60%;
+	float: right;
+	margin: 10px;
+	border: 1px solid white;
+	background: rgba(255, 255, 255, 0.3);
+	padding: 20px;
+	font-size: 20px;
+	border-radius: 5px;
+	overflow: auto;
+}
+#course_notice a{
+	color: black;
+	text-decoration: none;
+	font-size: 18px;
+}
+#course_notice span{
+	color: black;
+	font-size: 25px;
+	font-weight: bold;
+	text-align: 100%;
+}
+.coursegpubox{
+	font-size: 18px;
+	border: 1px solid white;
+	height: 50px;
+	width: 100%;
+	border-radius: 5px;
+	margin-top: 8px;
+	padding: 5px;
+}
+#courseinfo{
+	height: 250px;
+	width: 25%;
+	float: left;
+	margin: 10px;
+	border: 1px solid white;
+	background: rgba(255, 255, 255, 0.3);
+	padding: 20px;
+	font-size: 20px;
+	border-radius: 5px;
+	overflow: auto;
+}
+#courseinfo a{
+	color: black;
+	text-decoration: none;
+	font-size: 22px;
+	font-weight: bold;
+}
+
+#coursegpu {
+	height: 250px;
+	width: 60%;
+	float: right;
+	margin: 10px;
+	border: 1px solid white;
+	background: rgba(255, 255, 255, 0.3);
+	padding: 20px;
+	font-size: 20px;
+	border-radius: 5px;
+	overflow: auto;
+}
+#coursegpu a{
+	color: black;
+	text-decoration: none;
+	font-size: 18px;
+}
+#coursegpu span{
+	color: black;
+	font-size: 25px;
+	font-weight: bold;
+	text-align: 100%;
 }
