--- a/watchlist/templates/index.html
+++ b/watchlist/templates/index.html
@@ -3,9 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>home page</title>
-	<link rel="stylesheet" href="/static/style.css" />
+	<link rel="stylesheet" href="/static/style.css"/>
 </head>
 <body>
+	{% for message in get_flashed_messages() %}
+	    <div class="alert" style="float:left;margin-left:45%;margin-top:8px;text-align:center;font-size:18px;color:black;width:20%;font-weight:bold;">
+	    	{{ message }}
+	    </div>
+	{% endfor %}
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
@@ -14,18 +19,15 @@
 	        </div>
 
 			<div id="other">
-				<div id="userinfo">
-					<select name="user" id="user">
-						<option selected="selected" value="0" class="userselect">
-							<span>Username</span>
-						</option>
-						<option value="1" class="userselect">通知</option>
-						<option value="2" class="userselect">退出登录</option>
-					</select>
-				</div>
-				<div id="userimg">
-					<img src="/static/pic/1.jpg" alt="image">
-				</div>				
+				<form form method="POST" action="/logout/">
+					<a id="login_out" href="/logout/" class="button">退出登录</a>
+					<div id="user_name">
+						<span>Username</span>
+					</div>
+					<div id="user_img">
+						<img src="/static/pic/1.jpg" alt="image">
+					</div>
+				</form>			
 			</div>
 		</div>
 
