--- a/watchlist/templates/submit.html
+++ b/watchlist/templates/submit.html
@@ -6,6 +6,11 @@
 	<link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
+	{% for message in get_flashed_messages() %}
+	    <div class="alert" style="float:left;margin-left:45%;margin-top:8px;text-align:center;font-size:18px;color:black;width:20%;font-weight:bold;">
+	    	{{ message }}
+	    </div>
+	{% endfor %}
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
@@ -14,18 +19,15 @@
 	        </div>
 
 			<div id="other">
-				<div id="userinfo">
-					<select name="user" id="user">
-						<option selected="selected" value="0" class="userselect">
-							<span>Username</span>
-						</option>
-						<option value="1" class="userselect">通知</option>
-						<option value="2" class="userselect">退出登录</option>
-					</select>
-				</div>
-				<div id="userimg">
-					<img src="/static/pic/1.jpg" alt="image">
-				</div>				
+				<form form method="POST" action="/logout/">
+					<a id="login_out" href="/logout/" class="button">退出登录</a>
+					<div id="user_name">
+						<span>Username</span>
+					</div>
+					<div id="user_img">
+						<img src="/static/pic/1.jpg" alt="image">
+					</div>
+				</form>			
 			</div>
 		</div>
 
@@ -74,7 +76,7 @@
 					<div id="ssh">
 						<p>
 							<strong>SSH方式</strong>
-							<input id="ssh_button" type="submit" class="button is-info" value="提交">
+							<input id="ssh_button" type="submit" class="#" value="提交">
 						</p>						
 						<input type="text" name="SSH方式" required style="height:2em;width:100%;margin-top:3px;">
 					</div>
@@ -83,7 +85,7 @@
 				<form method="POST" action="/">
 					<div id="submit">
 						<p><strong>直接上传文件</strong></p>
-						<input id="submit_button" type="submit" class="button is-info" value="选择文件">
+						<input id="submit_button" type="submit" class="#" value="选择文件">
 					</div>
 				</form>
 				
@@ -93,7 +95,7 @@
 							<strong>代码编辑器</strong>
 						</p>
 						<textarea id="edit_text" name="edit" cols="145" rows="18"></textarea>
-						<input id="edit_button" type="submit" class="button is-info" value="运行">
+						<input id="edit_button" type="submit" class="#" value="运行">
 						</a>
 					</div>
 				</form>
