--- a/watchlist/static/style.css
+++ b/watchlist/static/style.css
@@ -10,7 +10,15 @@ html {
 	background:url("pic/bg.gif") repeat-y;
 	background-size: cover;
 }
-
+#flask_message{
+	float: left;
+	left:50%;
+	text-align: center; 
+	font-size:15px;
+	color:black;
+	border:1px solid;
+	width:50px;
+}
 
 #container {
 	margin: 0;
@@ -26,38 +34,46 @@ html {
 	z-index: 1000;left: 0; top: 0; 
 }
 
-#userimg {
-	height: 88%;
-	width: 5%;
-	float: right;
-	line-height: 100%;
-	margin: 5px;
-}
-
-#userimg img {
-	margin: 5px auto;
-	border: 1px solid white;
-}
-
-#user {
-	float: right;
-	font-size: 15px;
-	margin-top: 7px;
-	margin-left: 5px;
-	margin-right: 15px;
-	padding: 2px;
+#login_out{
+	height: 30px;
+	padding: 0 5px;
+	margin:5px 15px 6px 2px;
+	font-size:15px;
+	line-height: 30px;
+	float:right;
 	background: rgba(255, 255, 255, 0.2);
-	border: 1px solid white;
+	color:black;
+	text-decoration: none;
+	border:1px solid white;
 	border-radius: 5px;
-	color: black;
+}
+#user_img{
+	width: 2%;
+	height: 88%;
+	float: right;
+	margin: 8px 5px;
+}
+#user_img{
+	padding: 1px;
+	margin: 4px 1px;
+	border-radius: 3px;
 }
 
-.userselect {
-	background-color: rgba(255, 255, 255, 0.2);
-	line-height: 25px;
-	padding: 2px;
-	margin-left: 2px;
+#user_name {
+	width: 80px;
+	height: 88%;
+	float: right;
+	margin:1px 0 1px 5px;
+	padding: 1px;
+	color: black;
+	text-align: right;
 }
+#user_name span{
+	font-size: 15px;
+	font-weight: bold;
+	text-align: right;
+}
+
 
 
 #logo {
@@ -99,6 +115,7 @@ html {
 	color: black;
 	margin-right:20px;
 }
+
 
 #main {
 	height: auto;
