pzq 6.16 注销按钮+每个页面的提示信息+settings

--- a/watchlist/templates/settings.html
+++ b/watchlist/templates/settings.html
@@ -72,7 +72,64 @@
 			</div>
 
 			<div id="content">
-				
+				<form method="POST" action="/">
+					<div id="settings">
+						<p>个人设置</p>
+						<div id="setting_img">
+							<a id="/" href="/" class="button">
+								<img src="/static/pic/1.jpg" alt="image">
+								<span>修改头像</span>
+							</a>
+						</div>
+						<table id="setting_table">
+							<tr>
+								<th>用户名称</th>
+								<td>Username</td>
+								<td>
+									<a class="setting_button" href="/" class="button">
+										编辑
+									</a>
+								</td>
+							</tr>
+							<tr>
+								<th>用户密码</th>
+								<td>*******</td>
+								<td>
+									<a class="setting_button" href="/" class="button">
+										编辑
+									</a>
+								</td>
+							</tr>
+							<tr>
+								<th>用户学号</th>
+								<td>未填写</td>
+								<td>
+									<a class="setting_button" href="/" class="button">
+										编辑
+									</a>
+								</td>
+							</tr>
+							<tr>
+								<th>用户年级</th>
+								<td>未填写</td>
+								<td>
+									<a class="setting_button" href="/" class="button">
+										编辑
+									</a>
+								</td>
+							</tr>
+							<tr>
+								<th>用户班级</th>
+								<td>未填写</td>
+								<td>
+									<a class="setting_button" href="/" class="button">
+										编辑
+									</a>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</form>
 			</div>
 
 		</div>
